--- a/.github/workflows/release-notes.yaml
+++ b/.github/workflows/release-notes.yaml
@@ -11,11 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run release.notes image
-        uses: infobloxopen/github.release.notes@7b259382ed223d3db21cb18d7d3e2089c1500a81
+        uses: infobloxopen/github.release.notes@fe3d842f17cfde577b57998e2f5364e015fe6735
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          github-tag: ${GITHUB_REF#refs/*/}
+          # github-tag: ${{GITHUB_REF#refs/*/}}
           github-user: ${{ github.actor }}
-          github-repo: $GITHUB_REPOSITORY
+          github-repo: ${{ github.repository }}
