--- a/.github/workflows/release-notes.yaml
+++ b/.github/workflows/release-notes.yaml
@@ -2,48 +2,23 @@ name: release-notes
 on:
   push:
     tags: ['*']
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 env:
-  USER: 'user'
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
-  job-bash:
-    runs-on: ubuntu-latest
-    container: bash:3
-    steps:
-      - name: Run a multi-line script
-        run: |
-          echo hello-world,
-          echo "::set-output name=hi::hello-world"
-  create-release:
+  release-notes:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Create artifact file
-        run: |
-          mkdir -p path/notes
-          echo "[Full Changelog](https://github.com/Infobloxopen/github.release.notes/compare/v0.0.8...v0.0.91)" > path/notes/commit.txt
-      - name: Create tag
-        id: create_tag
-        run: |
-          echo "::set-output name=tag::${{ env.RELEASE_VERSION }}"
-      - name: ls and pwd
-        run: |
-          ls -la
-          pwd
-          echo "${{ github.event.repository.name }}"
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Set env        
+        id: vars        
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}      
+      - name: Run release.notes image
+        uses: infobloxopen/github.release.notes@cb9419dd6598de67d310b0fd08bae26822d6a972
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.create_tag.outputs.tag }}
-          release_name: ${{ steps.create_tag.outputs.tag }}
-          body: ${{ github.event.head_commit.message }}
-          body_path: path/notes/commit.txt
-          prerelease: false
-        
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-tag: ${{ steps.vars.outputs.tag }}
+          github-user: ${{ github.actor }}
+          github-repo: ${{ github.repository }}
